--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_URL=http://laravel.dev
+APP_URL=http://omni.gon
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_KEY=SomeRandomString
 
 DB_CONNECTION=mysql
 DB_HOST=localhost
-DB_DATABASE=homestead
-DB_USERNAME=homestead
+DB_DATABASE=forge
+DB_USERNAME=forge
 DB_PASSWORD=secret
 
 MAIL_DRIVER=mail
