--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
         "creativeorange/gravatar": "~1.0",
         "davejamesmiller/laravel-breadcrumbs": "^3.0",
         "hieu-le/active": "~2.0",
-        "arcanedev/log-viewer": "~3.5.0"
+        "arcanedev/log-viewer": "~3.5.0",
+        "barryvdh/laravel-ide-helper": "^2.1",
+        "yajra/laravel-datatables-oracle": "~5.0",
+        "appzcoder/crud-generator": "^1.0"        
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
